--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ charset-normalizer==3.4.4
 click==8.3.0
 Flask==3.1.2
 idna==3.11
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==9.0.1
 requests==2.32.5
 urllib3==2.5.0
 Werkzeug==3.1.3
